@@ -19,6 +19,10 @@ subtitle.
 \fB\-h\fR, \fB\-\-help\fR
 Show command line options.
 .TP
+\fB\-a\fR, \fB\-\-adapt\-translation\fR
+When opening translation file, adapt to differences between main and
+translation documents.
+.TP
 \fB\-c\fR, \fB\-\-config\-file\fR=\fIFILE\fR
 Set the configuration file to use instead of the default.
 .TP
